--- a/app/src/main/res/layout/activity_restaurants.xml
+++ b/app/src/main/res/layout/activity_restaurants.xml
@@ -4,16 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.linus.myrestaurant.RestaurantActivity"
+    android:paddingBottom="16dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:paddingTop="16dp"
+    tools:context="com.linus.myrestaurant.ui.RestaurantListActivity"
     >
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/back"
-        android:scaleType="centerCrop"
-        />
+        android:layout_below="@id/locationTextView"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="16dp"
+        android:visibility="gone" />
+
+
 
     <ListView
         android:layout_width="match_parent"
@@ -23,7 +30,7 @@
         android:layout_marginTop="10dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:background="#ce93d8"
+        android:background="@color/colorBlack"
         android:visibility="gone" />
 
     <ProgressBar
